--- a/app/src/main/res/layout/card_detailplace.xml
+++ b/app/src/main/res/layout/card_detailplace.xml
@@ -1,35 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <LinearLayout
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        card_view:cardCornerRadius="4dp">
 
         <ImageView
             android:id="@+id/imageView_place"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/jaipur"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop" />
 
         <TextView
-            android:id="@+id/textView_place"
+            android:id="@+id/tv_place"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:layout_margin="10dp"/>
+            android:background="@drawable/gradient_black"
+            android:textColor="#FFFFFF"
+            android:paddingLeft="10sp"
+            android:paddingTop="5dp"
+            android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/textView_placeDesc"
+            android:id="@+id/tv_place_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_margin="10dp"
-            android:maxLines="2"/>
+            android:background="@drawable/gradient_black"
+            android:padding="5sp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:layout_gravity="bottom"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp" />
 
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
+
