--- a/app/src/main/res/layout/card_hotel.xml
+++ b/app/src/main/res/layout/card_hotel.xml
@@ -20,31 +20,40 @@
                 android:scaleType="centerCrop"/>
 
             <TextView
-                android:id="@+id/textView_rating"
+                android:id="@+id/textView_hotelRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rating 4.0/5"
                 android:textSize="25sp"
                 android:textColor="@android:color/white"
+                android:background="@drawable/gradient_black"
+                android:layout_margin="10dp"
                 android:layout_gravity="start|bottom"/>
 
             <TextView
-                android:id="@+id/textView_price"
+                android:id="@+id/textView_hotelPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="RS 2000"
                 android:textSize="25sp"
                 android:textColor="@android:color/white"
+                android:background="@drawable/gradient_black"
+                android:layout_margin="10dp"
                 android:layout_gravity="end|bottom" />
 
         </FrameLayout>
 
         <TextView
-            android:id="@+id/textView_address"
+            android:id="@+id/textView_hotelName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="25sp"
+            android:layout_margin="10dp"/>
+
+        <TextView
+            android:id="@+id/textView_hotelAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="HELLONDJAHDJD"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textColor="@android:color/black"
             android:layout_margin="10dp"/>
 
@@ -56,7 +65,7 @@
             android:text="BOOK NOW"
             android:textColor="@android:color/white"
             android:textSize="20sp"
-            android:background="@android:color/holo_green_light"/>
+            android:background="@color/colorAccent"/>
 
     </LinearLayout>
 
