--- a/app/src/main/res/layout/card_detailplace.xml
+++ b/app/src/main/res/layout/card_detailplace.xml
@@ -16,7 +16,7 @@
 
         <ImageView
             android:id="@+id/imageView_place"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop" />
 
